me queda por ajustar de la misma altura todos los elementos del main y acomodarlos

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilos/estilo.css">
 </head>
 
 <body>
     <header>
         <div class="div_logo">
-            <img src="Ivyre..png" alt="logo" class="logo">
+            <img src="estilos/Ivyre..png" alt="logo" class="logo">
         </div>
         <nav>
             <a href="#">Home</a>
@@ -22,8 +22,8 @@
         </nav>
         <section class="section_header">
             <div class="div_iconos">
-                <img src="icons8-búsqueda-50.png" alt="lupa" class="lupa">
-                <img src="icons8-bolsa-de-compras-50.png" alt="bolsa_compras" class="bolsa">
+                <img src="estilos/icons8-búsqueda-50.png" alt="lupa" class="lupa">
+                <img src="estilos/icons8-bolsa-de-compras-50.png" alt="bolsa_compras" class="bolsa">
             </div>
             <div class="div_botones">
                 <button class="boton_1">Sign in</button>
@@ -32,20 +32,22 @@
         </section>
     </header>
     <main>
-        <section>
-            <div>
+        <section class="section_main">
+            <div class="div_texto">
                 <h1>Elegant Essence Collection</h1>
                 <button class="boton_3">SHOP NOW</button>
                 <p>Every detail in the fashion you use must be considered to maintain the feel of the style you choose
                     and to show the character in a more attractive fashion.</p>
             </div>
-            <div>
-                <img src="#" alt="">
-                <ol>
-                    <li class="li_1">01</li>
-                    <li class="li_2">02</li>
-                    <li class="li_3">03</li>
-                </ol>
+            <div class="div_img_main">
+                <div class="div_img">
+                    <img src="estilos/imgchica-removebg-preview (1).png" alt="portrait" class="portrait">
+                </div>
+                <div class="div_numeros">
+                    <p class="uno">01</p>
+                    <p class="dos">02</p>
+                    <p class="tres">03</p>
+                </div>
             </div>
         </section>
     </main>
