--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="div_logo">
-            <img src="estilos/Ivyre..png" alt="logo" class="logo">
+            <img src="estilos/Ivre.png" alt="logo" class="logo">
         </div>
         <nav>
             <a href="#">Home</a>
@@ -41,7 +41,7 @@
             </div>
             <div class="div_img_main">
                 <div class="div_img">
-                    <img src="estilos/imgchica-removebg-preview (1).png" alt="portrait" class="portrait">
+                    <img src="estilos/chicasinfondoRecorte.png" alt="portrait" class="portrait">
                 </div>
                 <div class="div_numeros">
                     <p class="uno">01</p>
