hice gap para tener el div a la derecha dentro del main

--- a/index.html
+++ b/index.html
@@ -34,11 +34,20 @@
     <main>
         <section class="section_main">
             <div class="div_texto">
+                <div class="div_titulo_texto">
                 <h1>Elegant Essence Collection</h1>
                 <button class="boton_3">SHOP NOW</button>
-                <p>Every detail in the fashion you use must be considered to maintain the feel of the style you choose
-                    and to show the character in a more attractive fashion.</p>
+                </div>
+
+                <div class="div_p_texto">
+                    <p class="p_texto">
+                        Every detail in the fashion you use must be considered to maintain the feel of
+                        the style you choose
+                        and to show the character in a more attractive fashion.
+                    </p>
+                </div>
             </div>
+            
             <div class="div_img_main">
                 <div class="div_img">
                     <img src="estilos/chicasinfondoRecorte.png" alt="portrait" class="portrait">
