--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <section class="section_header">
             <div class="div_iconos">
                 <img src="estilos/icons8-búsqueda-50.png" alt="lupa" class="lupa">
-                <img src="estilos/icons8-bolsa-de-compras-50.png" alt="bolsa_compras" class="bolsa">
+                <div class="bolsa_notificacion">
+                    <img src="estilos/icons8-bolsa-de-compras-50.png" alt="bolsa_compras" class="bolsa">
+                    <img src="estilos/icons8-barato-32.png" alt="" class="notificacion">
+                </div>
             </div>
             <div class="div_botones">
                 <button class="boton_1">Sign in</button>
@@ -35,8 +38,8 @@
         <section class="section_main">
             <div class="div_texto">
                 <div class="div_titulo_texto">
-                <h1>Elegant Essence Collection</h1>
-                <button class="boton_3">SHOP NOW</button>
+                    <h1>Elegant Essence Collection</h1>
+                    <button class="boton_3">SHOP NOW</button>
                 </div>
 
                 <div class="div_p_texto">
@@ -47,7 +50,7 @@
                     </p>
                 </div>
             </div>
-            
+
             <div class="div_img_main">
                 <div class="div_img">
                     <img src="estilos/chicasinfondoRecorte.png" alt="portrait" class="portrait">
